--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@ body {
 }
 
 .header {
+	background-color: #1f2937;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background-color: sienna;
+	background-color: #1f2937;
 }
 
 ul {
