--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,12 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding-left: 96px;
+	padding-right: 96px;
+	padding-top: 0;
 	background-color: #1f2937;
+	padding-left: 96px;
+	padding-right: 96px;
 }
 
 ul {
