--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,16 @@ body {
 	padding-left: 96px;
 	padding-right: 96px;
 	padding-top: 0;
+}
+ul {
+	gap: 16px;
+}
+
+.subheader {
 	background-color: #1f2937;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	padding-left: 96px;
 	padding-right: 96px;
 }
@@ -21,6 +30,41 @@ body {
 	flex-direction: column;
 }
 
+.info {
+	background-color: burlywood;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
+.cards {
+	display: flex;
+	gap: 16px;
+}
+
+.inspire {
+	background-color: darkolivegreen;
+	/* display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center; */
+}
+p {
+	margin: 0;
+}
+.quote {
+	text-align: center;
+}
+.author {
+	text-align: end;
+}
+
+.call {
+	background-color: gray;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 ul {
 	display: flex;
 }
@@ -28,4 +72,8 @@ ul {
 a {
 	text-decoration: none;
 	color: black;
+}
+
+.footer {
+	text-align: center;
 }
