--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
 	align-items: center;
 	margin: 0;
 }
-
 .header {
 	background-color: #1f2937;
 	display: flex;
@@ -24,6 +23,13 @@ ul {
 	align-items: center;
 	padding-left: 96px;
 	padding-right: 96px;
+}
+.placeholder {
+	width: 300;
+	height: 300;
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-image: url("./300.png");
 }
 .subheader-left {
 	display: flex;
@@ -68,7 +74,6 @@ p {
 ul {
 	display: flex;
 }
-
 a {
 	text-decoration: none;
 	color: black;
