--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
 body {
+	display: flex;
 	flex-direction: column;
-	align-items: center;
+	justify-content: space-between;
 	margin: 0;
+	height: 100vh;
+	overflow: hidden;
+	font-family: Roboto, sans-serif;
+}
 }
 .header {
 	background-color: #1f2937;
