--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+	color: wheat;
+}
+
 body {
 	display: flex;
 	flex-direction: column;
@@ -79,14 +83,18 @@ p {
 	align-items: center;
 	justify-content: center;
 }
+
+.footer {
+	text-align: center;
+}
+
 ul {
 	display: flex;
 }
 a {
 	text-decoration: none;
-	color: black;
+	color: wheat;
 }
-
-.footer {
-	text-align: center;
+button {
+	color: black;
 }
