--- a/styles.css
+++ b/styles.css
@@ -57,18 +57,22 @@ img {
 }
 
 .info {
-	justify-content: space-evenly;
-	align-items: center;
+	display: flex;
+	flex-direction: column;
 }
 .info * {
 	color: black;
 }
-	color: black;
+.cards {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 	color: black;
 }
 	display: flex;
-	gap: 16px;
+	flex-direction: column;
+	align-items: center;
 }
 
 .inspire {
