--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,9 @@ a {
 button {
 	color: black;
 }
+.text-header {
+	text-align: center;
+	font-size: large;
+	font-weight: bold;
+	padding-bottom: 16px;
+}
