Add padding to the inspire section, set the font properties

--- a/styles.css
+++ b/styles.css
@@ -93,14 +93,26 @@ img {
 }
 
 .inspire {
-	background-color: darkolivegreen;
-	/* display: flex;
+	background-color: #e5e7eb;
+	padding-left: 96px;
+	padding-right: 96px;
+	display: flex;
 	flex-direction: column;
 }
-p {
-	margin: 0;
+.inspire * {
+	color: black;
+.inspire * {
+	color: black;
+	/* 36px light italic */
+	font-size: 36px;
+	font-weight: lighter;
+	font-style: italic;
 }
 .quote {
+	/* 36px light italic */
+	font-size: 36px;
+	font-weight: lighter;
+	font-style: italic;
 	text-align: center;
 }
 .author {
