--- a/styles.css
+++ b/styles.css
@@ -114,10 +114,19 @@ img {
 }
 
 .call {
-	background-color: gray;
+	background-color: rgb(41, 62, 182);
+	margin: 96px;
+	margin-top: 32px;
+	margin-bottom: 32px;
+	padding-left: 96px;
+	padding-right: 96px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+.call-content {
+	display: flex;
+	flex-direction: column;
 }
 
 .footer {
