--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,17 @@ img {
 	margin: 0;
 	padding: 0;
 }
+.subheader button {
+	padding: 6px;
+	padding-left: 16px;
+	padding-right: 16px;
+	font-family: Roboto, sans-serif;
+	color: #f9faf8;
+	background-color: rgb(108, 108, 206);
+	width: fit-content;
+	border-radius: 10%;
+	border: 0;
+}
 
 .info {
 	display: flex;
