--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,10 @@ img {
 	flex-direction: column;
 	align-items: center;
 }
+.infocard p {
+	margin: 0;
+	padding: 0;
+}
 
 .inspire {
 	background-color: #e5e7eb;
