Change call border radius from percentage to px

--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ img {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border-radius: 10px;
 }
 .call-content {
 	display: flex;
