--- a/styles.css
+++ b/styles.css
@@ -91,11 +91,6 @@ img {
 .info {
 	display: flex;
 	flex-direction: column;
-	padding-left: 96px;
-	padding-right: 96px;
-}
-.info * {
-	color: #1f2937;
 }
 #info-header {
 	font-size: 36px;
@@ -108,6 +103,8 @@ img {
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 36px;
+	padding-left: 96px;
+	padding-right: 96px;
 }
 .infocard {
 	display: flex;
@@ -140,10 +137,11 @@ img {
 }
 
 .call {
-	background-color: rgb(41, 62, 182);
-	margin: 240px;
+	margin: 180px;
 	margin-top: 32px;
 	margin-bottom: 32px;
+	padding-top: 32px;
+	padding-bottom: 32px;
 	padding-left: 72px;
 	padding-right: 72px;
 	display: flex;
