--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,7 @@ img {
 	align-items: center;
 	justify-content: center;
 	border-radius: 10px;
+	min-width: 100px;
 }
 .call-content {
 	display: flex;
