--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ img {
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 36px;
+	gap: 16px;
 	padding-left: 96px;
 	padding-right: 96px;
 }
@@ -116,6 +117,7 @@ img {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 4px;
 }
 .infocard p {
 	color: #1f2937;
@@ -160,6 +162,7 @@ img {
 	justify-content: center;
 	border-radius: 10px;
 	min-width: 100px;
+	gap: 16px;
 }
 .call-content {
 	display: flex;
